# ai-discord-lol

./: .env.example  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
src/: config.py  main.py
src/bot/: message_flow.py
src/llm/: chat.py
src/prompts/: system_message.jinja2
